--- a/Swift/10.열거형/열거형 2.md
+++ b/Swift/10.열거형/열거형 2.md
@@ -89,3 +89,288 @@ case .none:
 #### _.none과 nil은 완전히 동일_
 
 - .none은 명시적인 열거형으로 표현한 것이고, 일반적으로는 값이 없다는 의미의 nil키워드를 사용할뿐
+
+## 열거형과 switch문
+
+- 열거형의 정의와 switch문을 통한 활용
+
+#### _열거형에 대한 구체적인 처리는 스위치(switch)문과 함께 쓸때, 사용성이 높아짐_
+
+##### 로그인 타입을 정의
+
+```
+
+enum LoginProvider: String {      // 3가지로 정의
+
+    case email
+
+    case facebook
+
+    case google
+}
+
+
+let userLogin = LoginProvider.facebook
+
+```
+
+- 열거형은 항상 스위치문과 쓰인다고 생각해도 무방하다.
+
+- 열거형은 한정된 사례로 만든 타입이고,
+
+- 스위치문은 표현식에 대한 분기처리에 최적화
+
+```
+switch userLogin {                   // 3가지로 분기처리
+
+case .email:
+
+    print("이메일 로그인")
+
+case .facebook:
+
+    print("페이스북 로그인")
+
+case .google:
+    print("구글 로그인")
+
+}
+
+```
+
+##### 물론 특정한 경우도 처리 가능
+
+```
+if LoginProvider.email == userLogin {
+
+    print("이메일 로그인")
+
+}
+
+```
+
+## 열거형에 (연관값이 없고), 옵셔널 열거형의 경우
+
+- switch문의 편의성 (열거형 case 패턴) - Enumeration Case Pattern
+
+- 열거형은 if문이 아닌 switch문으로 처리한다고 생각하면 된다.
+
+- 열거형의 선언
+
+- 옵셔널 열거형이라는 것은 열거형 타입 그 자체에 ?를 붙였다는 의미이다.
+
+- 열거형 내부에 열거형이 나열되어 있는 코드
+
+```
+enum SomeEnum {
+
+    case left
+
+    case right
+
+}
+
+```
+
+###### 타입을 다시 옵셔널 열거형으로 선언 ⭐️
+
+```
+let x: SomeEnum? = .left
+
+```
+
+##### [SomeEnum?의 의미] 옵셔널 열거형
+
+- 값이 있는 경우 .some ===> 내부에 다시 열거형 .left /.right
+
+- 값이 없는 경우 .none ===> nil
+
+##### 원칙
+
+```
+
+switch x {
+case .some(let value):      // Optional.some(let value) = Optional.some(SomeEnum.left)  ⭐️
+    switch value {
+    case .left:
+        print("왼쪽으로 돌기")
+    case .right:
+        print("오른쪽으로 돌기")
+    }
+case .none:
+    print("계속 전진")
+}
+
+```
+
+##### 편의적 기능 제공 ⭐️
+
+```
+switch x {
+
+case .some(.left):
+    print("왼쪽으로 돌기")
+case .some(.right):
+    print("오른쪽으로 돌기")
+case .none:
+    print("계속 전진")
+}
+
+```
+
+### 스위치문의 편의성
+
+#### _switch문에서 옵셔널 열거형 타입을 사용할때, 벗기지 않아도 내부값 접근가능_
+
+- 스위치문은 옵셔널 열거형 타입의 사용시, 편의성을 제공
+
+```
+switch x {
+
+    // 예전에는 x! 라고 써줘야 했음 (스위치문에서 옵셔널 타입도 ok)
+case .left:
+    print("왼쪽으로 돌기")
+case .right:
+    print("오른쪽으로 돌기")
+case nil:
+    print("계속 전진")
+}
+
+```
+
+## 열거형에 연관값이 있는 경우
+
+- 1. 연관값(Associated Values)이 있는 경우와 switch문 (열거형 case 패턴) - Enumeration Case Pattern
+
+##### 연관값이 있는 열거형의 활용 (열거형 case 패턴) ⭐️
+
+- 구체적 정보(연관값)를 변수에 바인딩(let/var가능)하는 패턴
+
+[열거형 case 패턴]
+
+- case Enum.case(let 변수이름):
+
+- case let Enum.case(변수이름):
+
+[스위치문 뿐만 아니라, 조건문/반복문에서도 활용가능]
+
+1. switch문 (대부분)
+
+2. if / guard / for-in / while (필요한 경우)
+
+###### 연관값이 있는 열거형 - 구체적인 정보가 연관값에 들어 있음
+
+###### 구체적인 정보를 꺼내서 사용해야하는, 로직 구현의 문제와 연관
+
+```
+enum Computer {                         // 3가지로 정의
+    case cpu(core: Int, ghz: Double)
+    case ram(Int, String)
+    case hardDisk(gb: Int)
+}
+
+
+var chip = Computer.cpu(core: 8, ghz: 3.1)
+
+
+
+
+switch chip {                          // 수십가지로도 처리 가능 (필요한 처리 확장 가능)
+case .cpu(core: 8, ghz: 3.1):
+    print("CPU 8코어 3.1GHz입니다.")
+case .cpu(core: 8, ghz: 2.6):
+    print("CPU 8코어 2.6GHz입니다.")
+case .cpu(core: 4, ghz: let ghz):       // let ghz = 연관값  (cpu가 4코어인 경우, ghz에 저장된 연관값을 꺼내서 바인딩)
+    print("CPU 4코어 \(ghz)HGz입니다.")
+case .cpu(core: _, ghz: _):
+    print("CPU 칩 입니다.")
+case .ram(32, _):
+    print("32기가램 입니다.")
+case .ram(_, _):
+    print("램 입니다.")
+case let .hardDisk(gb: gB):            // let gB = 연관값
+    print("\(gB)기가 바이트 하드디스크 입니다.")
+default:                               // 대부분 default문이 필요하기도 함
+    print("그 외에 나머지는 관심이 없습니다. 그렇지만 칩이긴 합니다.")
+}
+
+
+```
+
+##### 연관값을 가지고 있는 열거형의 경우, 원하는 로직으로 잘 정의해서 처리해야하는 것에 주의
+
+### 2) 연관값(Associated Values)이 있는 경우, if / guard / for-in / while 문 (열거형 case 패턴)
+
+###### 값 하나를 사용하기 위해서, 스위치문을 전체를 다 써야하는 불편함이 있었음
+
+```
+switch chip {
+case Computer.hardDisk(gb: let gB):      // let gB = 연관값
+    print("\(gB)기가 바이트 하드디스크임")
+default:
+    break
+}
+
+```
+
+#### _특정 케이스만 다루기 위해서 if문이나 반복문(for문) 사용 가능_
+
+```
+chip = Computer.hardDisk(gb: 128)    // 256
+
+
+
+// if문에서도 스위치문에서 사용하는 case문과 같이 사용 가능 ⭐️
+
+if case Computer.hardDisk(gb: let gB) = chip {
+    print("\(gB)기가 바이트 하드디스크임")
+}
+
+
+
+if case Computer.hardDisk(gb: let gB) = chip, gB == 256 {    // 처리를 다양하게 활용 가능
+    print("256기가 바이트 하드디스크임")
+}
+
+
+
+
+
+
+let chiplists: [Computer] = [
+    .cpu(core: 4, ghz: 3.0),
+    .cpu(core: 8, ghz: 3.5),
+    .ram(16, "SRAM"),
+    .ram(32, "DRAM"),
+    .cpu(core: 8, ghz: 3.5),
+    .hardDisk(gb: 500),
+    .hardDisk(gb: 256)
+]
+
+
+
+for case let .cpu(core: c, ghz: h) in chiplists {    // 배열중에서 특정 케이스만 뽑아서 활용 가능 ⭐️
+    print("CPU칩: \(c)코어, \(h)헤르츠")
+}
+
+
+// 일반 for문과 비교 =====> 모든 경우
+
+for chip in chiplists {
+    print("\(chip)")
+}
+
+```
+
+### 열거형 케이스 패턴(for문) - 옵셔널타입 요소 배열
+
+- 옵셔널 타입을 포함하는 배열에서 반복문을 사용하는 경우
+
+```
+let arrays: [Int?] = [nil, 2, 3, nil, 5]
+
+
+for case .some(let number) in arrays {
+    print("Found a \(number)")
+}
+```
