--- a/Swift-Basic/7.함수/함수 1.md
+++ b/Swift-Basic/7.함수/함수 1.md
@@ -1,25 +1,26 @@
-# 함수 Ⅰ
+# 함수 Part 1
 
-## 함수(Function)
+## 함수(Function): "특정한 작업(기능)"을 수행하는 코드의 묶음에 식별할 수 있는특정한 이름을 부여하여 사용하는 것
 
-- "특정한 작업(기능)"을 수행하는 코드의 묶음에 (식별할 수 있는 특정한) 이름을 부여하여 사용하는 것
+> #### **함수(function)를 작성하는 방법(약속): 함수는 항상 2단계로 실행**
 
-##### 함수(function)를 작성하는 방법(약속)
-
-#### _함수는 항상 2단계로 실행_
-
-###### 1) 함수 정의문:함수를 정의한 것이지 실행한 것이 아니라는 점을 유의
+##### 1) 함수 정의문: 함수를 정의한 것이지 실행한 것이 아니라는 점을 유의
 
 ```
 func sayHello() {
-    print("Hello, world!")
-    print("Hello, Swift!")
-    print("Hello, what's up, bro!")
+
+    print("Hello)
+
+    print("안녕하세요.)
+
+    print("곤니찌와)
+
 }
+
 
 ```
 
-###### 2) 함수 실행문(call):실행문을 작성해야 비로소 실행된다.
+##### 2) 함수 실행문(call): 실행문을 작성해야 비로소 실행된다.
 
 ```
 sayHello()
@@ -28,15 +29,17 @@ sayHello()
 
 ### 함수를 왜 사용할까? (함수 사용의 이유)
 
-1.  반복되는 동작을 단순화해서 재사용 가능
+- 1. 반복되는 동작을 단순화해서 재사용 가능
 
-2.  코드를 논리적 단위로 구분 가능
+- 2.  코드를 논리적 단위로 구분 가능
 
-3.  코드 길이가 긴 것을 단순화해서 사용 가능
+- 3.  코드 길이가 긴 것을 단순화해서 사용 가능
 
-4.  미리 함수를 잘 만들어 놓으면, 개발자는 사용만 하면 됨(내부적 내용을 몰라도 사용 가능)
+- 4.  미리 함수를 잘 만들어 놓으면, 개발자는 사용만 하면 됨(내부적 내용을 몰라도 사용 가능)
 
 ### 함수의 실행문(call)에 대한 인지
+
+- 소괄호 ( )는 함수의 실행이다.
 
 ```
 print("Hello")
@@ -46,28 +49,30 @@ sayHello()
 
 ```
 
-#### _소괄호 ( )는 함수의 실행이다!_
-
-###### 소문자로 시작하고, 뒤에 () 소괄호(퍼렌서시스)가 오면 이것은 함수의 실행문이라는 것을 인지해야 함
+> #### **소문자로 시작하고, 뒤에 () 소괄호(퍼렌서시스)가 오면 이것은 함수의 실행문이라는 것을 인지해야 함**
 
 ## 함수의 형태
 
-- 1. 함수가 인풋이 있는 경우
+- 1. 함수가 인풋(input)이 있는 경우
 
-###### 함수 정의문
+> 함수 정의문
 
 ```
+
 func saySomething(name: String) {
 
     print("안녕하세요 \(name) 님")
+
 }
 
 ```
 
-###### 함수 실행문(call)
+> 함수 실행문(call)
 
 ```
 saySomething(name: "스티브")
+
+
 
 
 var name = "Jobs"
@@ -75,21 +80,27 @@ var name = "Jobs"
 
 saySomething(name: name)
 
-
 ```
 
 ### 2) 함수가 아웃풋(output)이 있는 경우
 
-###### 아웃풋 앞에 return이라는 키워드를 사용해야 한다.
+- 아웃풋 앞에 return이라는 키워드를 사용해야 한다.
 
 ```
 func sayHelloString() -> String {
+
     return "안녕하세요"
 }
 
+
+
 sayHelloString()
 
+
+
 print(sayHelloString() + " 잡스 님")
+
+
 
 // 함수를 호출하는 것도 표현식이 될 수 있다.(리턴형이 있는 경우)
 
@@ -97,9 +108,10 @@ print(sayHelloString() + " 잡스 님")
 
 var name1 = sayHelloString()
 
+
 ```
 
-### 인풋과 아웃풋이 모두 있는 경우
+### 3) 인풋과 아웃풋이 모두 있는 경우
 
 ```
 // 함수 정의문
@@ -107,8 +119,11 @@ var name1 = sayHelloString()
 // 함수의 아웃풋에는 반드시 하나의 타입만 나올 수 있다.
 
 func plusFuntion(a: Int, b: Int) -> Int {
+
     let c = a + b
+
     return c       // 아웃풋이 있는 경우, 리턴키워드를 사용해야함
+
 }
 
 
@@ -193,6 +208,7 @@ print(number5())
 ### Void 타입의 이해 (아웃풋이 없는 경우)
 
 ```
+
 func sayhello1() {
 
     // Void가 생략되어 있는 상태
@@ -211,32 +227,40 @@ func sayhello2() -> Void {
 
 
 func sayhello3() -> () {
+
     print("Hello, Swift!")
+
 }
+
 
 ```
 
 ### 리턴 타입이 없는 함수(Void 타입) vs 리턴타입이 있는 함수의 차이 ⭐️
 
-#### _리턴 타입이 없는 함수 ➞ 결과는 Void 타입_
+- 리턴 타입이 없는 함수 ➞ 결과는 Void 타입
 
 ```
 sayhello1()         // 제어권
 
-```
 
-- 이렇게 사용하는 경우는 없음
 
-- var hello: Void = sayhello1()
+// 이렇게 사용하는 경우는 없음
 
-- 즉, 결과값이 존재 X
+// var hello: Void = sayhello1()
 
-#### _리턴 타입이 있는 함수 ➞ 결국 결과로 "값"이 있는 것 ➞ (일반적으로)사용_
-
-###### 함수 자체를 값으로 볼 수 있음
+// 즉, 결과값이 존재 X
 
 ```
+
+> #### **리턴 타입이 있는 함수 ➞ 결국 결과로 "값"이 있는 것 ➞ (일반적으로)사용**
+
+- 함수 자체를 값으로 볼 수 있음
+
+```
+
+
 print(sayHelloString())       // 제어권 + 결과값
+
 
 ```
 
@@ -244,27 +268,11 @@ print(sayHelloString())       // 제어권 + 결과값
 
 - 파라미터(Parameter)
 
-###### - 파라미터: 함수 정의시, 함수 정의에 입력값으로 사용되는 변수(내부사용)
+##### 파라미터: 함수를 정의시, 함수 정의에 입력값으로 사용되는 변수(내부사용)
 
-###### - 아규먼트: 함수를 호출시, 함수가 필요한 파라미터의 타입과 일치하는 실제 값(외부사용)
+##### 아규먼트: 함수를 호출시, 함수가 필요한 파라미터의 타입과 일치하는 실제 값(외부사용)
 
-##### 예시
-
-```
-func plusFunction(number1 a:Int , number2 b:Int ) -> { }
-
-                // number1: 아규먼트 레이블
-                                  number2: 아규먼트 레이블
-
-                          a:파라미터 이름        b:파라미터 이름
-                // 아규먼트 레이블: 파라미터를 외부에서 볼때, 함수 호출시 사용하려는 이름
-
-                (_a:Int, _b:Int) -> 아규먼트 레이블을 생략하고 싶을 때
-                _(언더바) 사용 가능: 와일드카드 패턴
-
-```
-
-##### 파라미터 이름만 사용할때(아규먼트 레이블을 사용 안하면)
+> 파라미터 이름만 사용할때(아규먼트 레이블을 사용 안하면)
 
 ```
 func printName(name: String) {
@@ -283,27 +291,28 @@ printName(name: "에디슨")          //   "에디슨" (아규먼트)
 
 ### 1) 아규먼트 레이블(Argument Label)
 
-#### 아큐먼트 레이블을 사용하면
-
 ```
+// 아큐먼트 레이블을 사용하면
+
 func printName1(first name: String) {
 
     print("나의 이름은 \(name) 입니다.")
 
 }
 
-```
+// 외부에서 보여지는 것은 first(아규먼트 레이블),
 
-#### 외부에서 보여지는 것은 first(아규먼트 레이블), 실제 내부에서 작동하는 것은 name(파라미터)
+// 실제 내부에서 작동하는 것은 name(파라미터)
 
-```
 printName1(first: "뉴턴")
 
-```
 
-#### 아규먼트 레이블을 사용 안하면
 
-```
+
+
+// 아규먼트 레이블을 사용 안하면
+
+
 func someFunction(first: Int, second: Int) {
 
     print(first + second)
@@ -313,9 +322,10 @@ func someFunction(first: Int, second: Int) {
 
 someFunction(first: 1, second: 2)
 
+
 ```
 
-#### 아규먼트 레이블을 사용하는 것의 이점: 일반적으로 함수를 사용할때 더 명확하게 무엇을 요구하는 지 알려줄 수 있다.
+> 아규먼트 레이블을 사용하는 것의 이점:일반적으로 함수를 사용할때 더 명확하게 무엇을 요구하는 지를 알려줄 수 있다.
 
 ```
 func someFunction1(writeYourFirstNumber a:Int,
@@ -324,17 +334,21 @@ func someFunction1(writeYourFirstNumber a:Int,
 
     print(a + b)
 
-    someFunction1(writeYourFirstNumber: 3, writeYourSecondNumber: 4)
-
-
 }
+
+
+
+someFunction1(writeYourFirstNumber: 3, writeYourSecondNumber: 4)
+
 
 ```
 
 ### 2) 아규먼트 레이블을 생략해서 사용하는 것도 가능 (와일드카드 패턴)
 
 ```
+
 func addPrintFunction(_ firstNum: Int, _ secondNum: Int) {
+
     print(firstNum + secondNum)
 }
 
@@ -346,7 +360,7 @@ addPrintFunction(1, 2)
 
 ### 3) 가변파라미터 - 함수의 파라미터에 정해지지 않은, 여러개의 값을 넣는 것도 가능(Variadic Parameters)
 
-- 1. 하나의 파라미터로 2개이상의 아규먼트를 전달할 수 있다.
+- 1.  하나의 파라미터로 2개 이상의 아규먼트를 전달할 수 있다.
 
 - 2.  아규먼트는 배열형태로 전달된다.
 
@@ -355,11 +369,13 @@ addPrintFunction(1, 2)
 - 4.  가변 파라미터는 기본값을 가질 수 없다.
 
 ```
+
 func arithmeticAverage(_ numbers: Double...) -> Double {
 
     var total = 0.0     // 4.0
 
     for n in numbers {
+
         total += n  // 0.0 + 1.5, 1.5 + 2.5
     }
 
@@ -380,39 +396,20 @@ arithmeticAverage(1.5, 2.5)
 ### 4) 함수의 파라미터에 기본값(디폴트) 정하는 것도 가능
 
 ```
+
 func numFunction(num1: Int, num2: Int = 5) -> Int {
 
     var result = num1 + num2
+
+    // 함수를 실행할때 num2에 아규먼트를 주지 않는다면 기본값으로 5를 준다는 뜻
 
     return result
 
 }
 
-
-
-
 numFunction(num1: 3)
 
 numFunction(num1: 3, num2: 7)
-
-
-
-```
-
-#### _아규먼트값이 항상 필요한 것이 아닐 수도 있다!_
-
-```
-// 실제 애플이 미리 만들어 놓은 함수에는 기본값이 들어 있는 경우가 꽤 있다.
-
-
-
-//print(items: Any..., separator: string, terminator:String)
-
-
-
-// terminator: "\n" -> 엔터의 의미
-
-// separator: "" -> 글자를 연결 시킴. 띄어쓰기나 부호를 붙일 수 있음
 
 
 ```
@@ -421,19 +418,9 @@ numFunction(num1: 3, num2: 7)
 
 - 1. 함수의 파라미터에 대한 정확한 이해
 
-| 번호 |           제목            | 내용                                                                                                                                        |
-| ---- | :-----------------------: | ------------------------------------------------------------------------------------------------------------------------------------------- |
-| _1)_ |      파라미터의 이해      | 파라미터는 변수가 아닌 상수(let)이고, 함수 내부적으로만 쓰이므로 값의 변경이 불가능(변경을 하려면 새로운 변수를 선언해야 함.                |
-| _2)_ |        Scope(범위)        | 함수 내부에서 선언한 변수는 함수 내부에서 밖에 사용 하지 못함(외부 변수는 함수 내에서 접근 가능)                                            |
-| _3)_ |       return 키워드       | 1) 리턴 타입 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남                   |
-| _4)_ | 함수의 실행문(return타입) | 리턴 타입이 있는 함수를 호출하는 경우, 함수를 호출하는 것은 자체로 표현식(결과는 함수가 리턴하는 값)이라는 것을 인지하고 사용할 필요가 있음 |
-| _5)_ |     함수의 중첩 사용      | 함수 내부에서 함수를 작성하여 사용하는 것도 가능(다만, 외부에서 내부 함수는 접근 불가능).                                                   |
-
-##### _실제로는 함수를 자주 사용하다 보면, 익숙해지는 부분이기 때문에 굳이 외울 필요는 없음._
-
-#### 함수의 파라미터
-
 ```
+// 함수의 파라미터
+
 func someAdd(a: Int) -> Int {
 
     // let a: Int   (값의 변경이 불가능)
@@ -445,16 +432,18 @@ func someAdd(a: Int) -> Int {
     return a
 }
 
+
+
 someAdd(a: 5)
+
 
 ```
 
 ### 2) 함수 내의 변수의 Scope(스코프)
 
-#### _함수 내에서 선언한 변수의 Scope(범위) ➞ 함수의 바디로 제한됨_
+> #### **함수 내에서 선언한 변수의 Scope(범위) ➞ 함수의 바디로 제한됨**
 
 ```
-
 func sumOfNum(a: Int) -> Int {
 
     var sum = 0
@@ -469,25 +458,24 @@ func sumOfNum(a: Int) -> Int {
 
 sumOfNum(a: 3)
 
+
 ```
 
 ### 3) return 키워드의 정확한 이해
 
-#### return 키워드의 역할
+- return 키워드의 역할
 
 - 1.  리턴타입이 있는 함수의 경우(아웃풋이 있는 경우):
 
-      리턴 키워드 다음의 표현식을 평가한 다음에 그 결과를 리턴하면서 함수를 벗어남
+리턴 키워드 다음의 표현식을 평가한 다음에 그 결과를 리턴하면서 함수를 벗어남
 
 - 2.  리턴타입이 없는 함수의 경우(아웃풋이 없는 경우):
 
-      함수의 실행을 중지하고 함수를 벗어남 ⭐️
+함수의 실행을 중지하고 함수를 벗어남 ⭐️
 
-#### 리턴 타입이 있는 경우
+> 리턴 타입이 있는 경우
 
 ```
-
-
 func addFunction(num1: Int, num2: Int) -> Int {
 
     var result = num1 + num2
@@ -497,12 +485,18 @@ func addFunction(num1: Int, num2: Int) -> Int {
 
 
 
+
 addFunction(num1: 3, num2: 4)
+
+
+
+
 
 
 func valuationFunction(num: Int) -> Int {
 
     if num >= 5 {
+
         return num
     }
 
@@ -515,9 +509,10 @@ valuationFunction(num: 3)
 
 valuationFunction(num: 5)
 
+
 ```
 
-#### 리턴 타입이 없는 경우
+> 리턴 타입이 없는 경우
 
 ```
 func numberPrint(n num: Int) {
@@ -528,16 +523,15 @@ func numberPrint(n num: Int) {
 
         return
 
-       /*
+        /*
 
-       return 타입이 없는데도 불구하고 return을 사용하는 것은
+         return 타입이 없는데도 불구하고 return을 사용하는 것은
 
-       이 함수를 벗어난다는 의미이다. 즉 함수를 종료한다는 의미이다.
+         이 함수를 벗어난다는 의미이다. 즉 함수를 종료한다는 의미이다.
 
-       따라서 리턴 키워드를 사용하면 중괄호 내부의 코드만을 실행하게 된다.
+         따라서 리턴 키워드를 사용하면 중괄호 내부의 코드만을 실행하게 된다.
 
-       */
-
+         */
 
 
     }
@@ -554,9 +548,9 @@ numberPrint(n: 5)
 
 ```
 
-### 4) 리턴 타입이 있는 함수를 호출하는 경우, 함수를 호출하는 것은 표현식
+### 4) 리턴타입이 있는 경우, 함수의 실행문의 의미
 
-- 표현식의 결과는 함수가 리턴하는 값
+- 리턴 타입이 있는 함수를 호출하는 경우, 함수를 호출하는 것은 표현식 (표현식의 결과는 함수가 리턴하는 값)
 
 ```
 func nameString() -> String {
@@ -582,6 +576,7 @@ if nameString() == "스티브" {
 
 // var yourName: () -> String = nameString
 
+
 ```
 
 ### 5) 함수의 중첩 사용 - 중첩된 함수(Nested Functions)
@@ -593,7 +588,6 @@ if nameString() == "스티브" {
 - 함수를 제한적으로 사용하고 싶을 때, 사용
 
 ```
-
 
 func chooseStepFunction(backward: Bool, value: Int) -> Int {
 
@@ -610,8 +604,11 @@ func chooseStepFunction(backward: Bool, value: Int) -> Int {
     // 실행은 if문으로부터 시작이 되면서부터 위의 두 함수를 실행시키게 된다.
 
     if backward {
+
         return stepBackward(input: value)
+
     } else {
+
         return stepForward(input: value)
     }
 
@@ -634,50 +631,54 @@ chooseStepFunction(backward: true, value: value)
 chooseStepFunction(backward: false, value: value)
 
 
+
 ```
 
 ## 함수 표기법(지칭), 함수의 타입 표기
 
 - 참고) 함수 표기법
 
-##### 정의문
-
 ```
+// 정의문
+
 func doSomething() {
+
     print("출력")
 }
 
 
 
 func addPrintFunction(_ firstNum: Int, _ secondNum: Int) {
+
     print(firstNum + secondNum)
+
 }
 
-```
 
-##### 실행문
 
-```
+
+// 실행문
+
 numberPrint(n: 3)
 
 ```
 
-> #### 함수를 지칭하려는 경우, 함수를 어떻게 표기할까?
+##### 함수를 지칭하려는 경우, 함수를 어떻게 표기할까?
 
-1.  개발자 문서를 읽을 때 필요
+- 1.  개발자 문서를 읽을 때 필요
 
-2.  함수를 지칭할때 필요(함수를 변수에 담거나)
+- 2.  함수를 지칭할때 필요(함수를 변수에 담거나)
 
-#### 함수의 표기법(함수를 지칭시)
+##### 함수의 표기법(함수를 지칭시)
 
-##### 1) 파라미터가 없는 경우, ()를 삭제
-
-- 소괄호가 빠져있다면, 함수를 지칭하는 것이다.
+1. 파라미터가 없는 경우, ()를 삭제: 소괄호가 빠져있다면, 함수를 지칭하는 것이다.
 
 ```
 doSomething
 
 var some = doSomething
+
+some()
 
 ```
 
@@ -687,14 +688,9 @@ var some = doSomething
 
 - doSomething이라는 함수를 some이라는 변수로도 실행 가능하다는 것이다.
 
-- some 이라는 변수로 실행 시키는 것이 아닌 소괄호를 사용하여 실행 가능하다.
+- some이라는 변수로 실행 시키는 것이 아닌 소괄호를 사용하여 실행 가능하다.
 
-```
-some()
-
-```
-
-###### 2) 아규먼트 레이블이 있는 경우, 아규먼트 레이블까지를 함수의 이름으로 봄
+2. 아규먼트 레이블이 있는 경우, 아규먼트 레이블까지를 함수의 이름으로 봄
 
 - 파라미터가 있는 경우에는 타입을 지우고 아규먼트 레이블로 함수를 지칭
 
@@ -703,38 +699,38 @@ numberPrint(n:)        //  "numberPrint n 함수이다."
 
 ```
 
-##### 3) 파라미터가 여러개인 경우, 콤마없이 아규먼트 이름과 콜론을 표기
-
-- 함수를 지칭함으로서 변수에다가 함수를 담을 수 있다.
+3. 파라미터가 여러개인 경우, 콤마없이 아규먼트 이름과 콜론을 표기
 
 ```
 chooseStepFunction(backward:value:)
 
+// 함수를 지칭함으로서 변수에다가 함수를 담을 수 있다.
+
 ```
 
-##### 4) 아규먼트 레이블이 생략된 경우, 아래와 같이 표기
-
-- 콤마(,)가 없어야 한다.
+4. 아규먼트 레이블이 생략된 경우, 아래와 같이 표기 (콤마(,)가 없어야 한다.)
 
 ```
 addPrintFunction(_:_:)
+
 ```
 
 ### 함수 타입의 표기
 
-###### 변수에 정수를 저장하는 경우에 타입 표기
-
 ```
+// 변수에 정수를 저장하는 경우에 타입 표기
+
 var num: Int = 5
 
-```
 
-###### 함수의 타입 표기 방법
 
-```
+
+// 함수의 타입 표기 방법
+
 var function1: (Int) -> () = numberPrint(n:)
 
 // 함수의 타입:(Int) -> ()
+
 
 var function2: (Int, Int) -> () = addPrintFunction(_:_:)
 
@@ -747,4 +743,67 @@ var function2: (Int, Int) -> () = addPrintFunction(_:_:)
 // 변수가 함수를 가르키도록 할 수 있음
 
 function2(3, 5)
+
 ```
+
+## 함수의 오버로딩(overloading)
+
+- 함수의 오버로딩에 대한 이해
+
+> #### **오버로드(overload): 영어로 과적하다라는 뜻**
+
+- 같은 이름의 함수에 매개변수(파라미터)를 다르게 선언하여, 하나의 함수 이름에 실제 여러개의 함수를 대응 시키는 것
+
+- 쉽게 말하면: 함수의 이름의 재사용
+
+- 스위프트는 오버로딩을 지원하는 언어
+
+- ⭐️ 함수이름, 파라미터 수/자료형, 아규먼트 레이블, 리턴형을 모두 포함해서 함수를 식별
+
+```
+func doSomething(value: Int) {
+    print(value)
+}
+
+
+func doSomething(value: Double) {
+    print(value)
+}
+
+
+func doSomething(value: String) {
+    print(value)
+}
+
+
+func doSomething(_ value: String) {
+    print(value)
+}
+
+
+func doSomethging(value1: String, value2: Int) {
+    print(value1, value2)
+}
+
+
+
+
+doSomething(value: 5)
+
+doSomething(value: 3.4)
+
+doSomething(value: 3)
+
+```
+
+> 오버로딩을 지원하지 않는 언어의 단점
+
+같은 기능을 제공하는 함수를 파라미터 형식마다
+
+이름을 다르게 구현해야하기 때문에
+
+함수의 이름이 많아지고,구별해서 사용하는 것이 어렵다.
+
+오버로딩을 지원함으로서 함수 이름 하나에
+
+여러개가 대응되도록 만들어 놓으면 일일이 함수의 이름을 외울 필요가 없어진다.
