--- a/Swift-Basic/11.클래스와 구조체/초기화.md
+++ b/Swift-Basic/11.클래스와 구조체/초기화.md
@@ -1,74 +1,83 @@
 # 초기화
 
-## 구조체, 클래스의 초기화의 의미
-
 - 앞에서의 객체의 생성
 
-###### 너무나 당연하게도 데이터를 언제나 일일히 수동으로 하나하나 찍어내는 것은 사실상 불가능
+> 너무나 당연하게도 데이터를 언제나 일일히 수동으로 하나하나 찍어내는 것은 사실상 불가능
 
-###### 그렇기 때문에 생성자 라는게 필요하다.
+- 그래서 생성자 라는게 필요하다.
 
 ```
-class Charmander {
+class Dog {
 
-    var name = "파이리"    // 속성에 기본값을 넣어서 생성
+    var name = "강아지"    // 속성에 기본값을 넣어서 생성
 
-    var levels = 5
+    var weight = 0
 
-    func skill1() {
+    func sit() {
 
-        print("할퀴기")
+        print("앉았습니다.")
     }
 
-    func skill2() {
+    func layDown() {
 
-        print("불꽃세례")
+        print("누웠습니다.")
     }
 }
 
-var charmander = Charmander()
-
-charmander.name
-
-charmander.levels
 
 
+var bori = Dog()
 
-charmander.name = "구버전 파이리"
+bori.name
 
-charmander.name
+bori.weight
 
-charmander.levels = 15
 
-charmander.levels
+
+bori.name = "보리"
+
+bori.name
+
+bori.weight = 15
+
+bori.weight
+
 
 
 ```
 
 ### 초기화 메서드 / 이니셜라이저(initializer)
 
-> #### _생성자(이니셜라이저)는 인스턴스를 만들때 사용하는 특별한 메서드_
+> #### **생성자(이니셜라이저)는 인스턴스를 만들때 사용하는 특별한 메서드**
 
 ```
-class Charmander {
+class Dog1 {
 
     var name: String
 
-    var levels: Int
+    var weight: Int
 
     // 생성자:초기화  initializer
 
-    init(name: String, levels: Int) {   // 마치 함수를 선언하듯이
+    init(name: String, weight: Int) {
 
-        // name: 파라미터의 name
+        /*
 
-        // 만약 name = name 으로 할당해 버리면 함수 안에서 동일한 파라미터
+          마치 함수를 선언하듯이
 
-        // 이름을 쓰면 가장 가까운게 파라미터의 name이기 때문에
+          name: 파라미터의 name
 
-        // 인스턴스의 name을 무조건 파라미터로 인식하게 된다. 그래서 에러가 발생
+          만약 name = name 으로 할당해 버리면 함수 안에서 동일한 파라미터
 
-        // 그래서 인스턴스의 네임을 self로 지칭해 주는 것이다.
+          이름을 쓰면 가장 가까운게 파라미터의 name이기 때문에
+
+          인스턴스의 name을 무조건 파라미터로 인식하게 된다. 그래서 에러가 발생
+
+          그래서 인스턴스의 네임을 self로 지칭해 주는 것이다.
+
+         */
+
+
 
         self.name = name
 
@@ -77,40 +86,47 @@ class Charmander {
         self.weight = weight
     }
 
-    func skill1() {
+    func sit() {
 
-        print("\(self.name)의 할퀴기!")
+        print("\(self.name)가 앉았습니다.")
 
     }
 
     func layDown() {
 
-        print("\(self.name)의 불꽃세례!")
+        print("\(self.name)가 누웠습니다.")
 
     }
 }
 
-var charmander = Charmander(name: "파이리", levels: 5)
 
-charmander.name
+var dog1 = Dog1(name: "뭉이", weight: 12)
 
-charmander.levels
+dog1.name
 
-charmander.skill1()
+dog1.weight
 
-charmander.skill2()
+dog1.sit()
+
+dog1.layDown()
+
+
+var dog2 = Dog1(name: "땡이", weight: 10)     // 초기화 완료
+
 
 ```
 
-- var charmander = Charmander() 불가. 모든 속성(변수)에 값을 넣어야 함.
+- var dog1 = Dog1() 불가. 모든 속성(변수)에 값을 넣어야 함.
 
-- 클래스(구조체도 동일)를 찍어낼 때 타입을 선언하였기 때문에 구체적인 데이터가 반드시 존재해야 한다.
+- 클래스(구조체도 동일)를 찍어낼 때 타입을 선언하였기 때문에
 
-##### 초기화 메서드 / 이니셜라이저
+- 구체적인 데이터가 반드시 존재해야 한다.
+
+### 초기화 메서드 / 이니셜라이저
 
 - init(파라미터)
 
-- 모든 저장 속성(변수)을 초기화 해야함 (구조체, 클래스 동일)
+- 모든 저장 속성(변수)을 초기화 해야함 (구조체, 클래스 동일): 모든 속성에 값을 넣어줘야 한다.
 
 - 생성자 실행 종료시점에는 모든 속성의 초기값이 저장되어 있어야 함
 
@@ -123,20 +139,50 @@ charmander.skill2()
 - 실제 데이터(속성), 동작(메서드)을 사용하기 위해서는 ===> 초기화 과정이 반드시 필요함
 
 ```
-var charmander1 = Charmander(name: "리자드", levels: 16)
+var dog3 = Dog1(name: "흰둥이", weight: 25)
 
+var dog4 = Dog1.init(name: "초코", weight: 13)
 
+// .init: 정식 문법. 보통 줄여서 쓰기에 위의 경우처럼 쓴다.
 
-
-var charmander2 = Charmander.init(name: "리자몽", levels: 36)
-
-
+// 생성자의 의미: 데이터를 실제로 메모리에 생성하기 위한 필수적인 과정
 
 ```
 
-> .init: 정식 문법. 보통 줄여서 쓰기에 위의 경우처럼 쓴다.
+> #### **인스턴스 초기화 완료 ➞ 메모리에 정상적으로 인스턴스가 생성**
 
-> #### _인스턴스 초기화 완료 ➞ 메모리에 정상적으로 인스턴스가 생성_
+### 생성자(이니셜라이저)와 self 키워드
+
+- 인스턴스내에서 동일한 변수명, 상수명을 사용할때 가르키는 것을 명확하게 하기 위해 self 키워드를 사용
+
+```
+class Dog2 {
+
+    var name: String
+
+    var weight: Int
+
+    init(name: String, weight: Int) {
+
+        self.name = name
+
+        self.weight = weight
+    }
+
+    func sit() {
+        print("\(self.name)가 앉았습니다.")
+    }
+
+    func layDown() {
+
+        print("\(name)가 누웠습니다.")
+
+    }
+}
+
+```
+
+> #### **self 키워드는 클래스/구조체 내에서 해당 인스턴스(자기자신)를 가르킴**
 
 ### 초기화의 의미 - 속성이 옵셔널 타입인 경우
 
@@ -145,129 +191,51 @@ var charmander2 = Charmander.init(name: "리자몽", levels: 36)
 - 초기화의 의미: 우리가 정의해 놓은 붕어빵 틀에서 붕어빵을 생성할 때 모든 저장 속성이 값을 가져야 한다.
 
 ```
-
-class Charmander4 {
+class Dog3 {
 
     var name: String?
 
     // 옵셔널 스트링으로 선언하면 값이 없어도 상관없음. nil로 초기화
 
-    var levels: Int
+    var weight: Int
 
-    init(levels: Int) {
+    init(weight: Int) {
 
-        // self.name = "파이리" // Optional("파이리")
+        // self.name = "강아지" //Optional("강아지")
 
-        self.levels = levels
-    }
+        // 기본값 제시도 가능 init(name: String = "강아지")
 
-    func skill1() {
-
-        print("\(name)의 할퀴기!")
-
-    }
-
-    func skill2() {
-
-        print("\(name)의 불꽃세례")
-
-    }
-}
-
-var charmander5 = Charmander1(leverls: 50)
-
-charmander5.name
-
-print(charmander5.name)
-
-print(charmander5.weight)
-
-charmander5.skill2()    // nil의 불꽃 세례!
-
-
-```
-
-> #### _옵셔널타입을 가진 변수의 경우는 반드시 초기화값이 있을 필요는 없음 ➞ nil로 초기화되기 때문_
-
-### Identity Operators(식별 연산자)
-
-- 식별 연산자 - 두개의 참조가 같은 인스턴스를 가리키고 있는지를 비교하는 방법
-
-- 클래스의 인스턴스가 같은지를 비교하는 연산자
-
-```
-
-print(charmander === charmander1)
-
-print(charmander !== charmander1)
-
-```
-
-## 정리
-
-### 초기화(initializer)
-
-- 초기화의 생성자
-
-```
-class Dog {
-
-    var name: String
-
-    var weight: Double
-
-    /* 초기화 메서드
-
-
-    init(name: String, weight: Double) {
-
-        self.name = name
+        // 초기화 메서드로 값을 재설정하지 않는 한 "강아지"가 출력됨
 
         self.weight = weight
     }
 
-    */
+    func sit() {
+
+        print("\(name)가 앉았습니다.")
+
+    }
+
+    func layDown() {
+
+        print("\(name)가 누웠습니다.")
+
+    }
 }
+
+
+
+var dog5 = Dog3(weight: 10)
+
+dog5.name
+
+print(dog5.name)
+
+print(dog5.weight)
+
+dog5.sit()
+
 
 ```
 
-#### 초기화 메서드
-
-- 함수의 구현이 특별한 키워드인 init으로 명명됨
-
-- 인스턴스 생성 과정: 저장 속성에 대한 초기값을 설정하여 사용 가능한 상태가 되는 것
-
-- 생성자 메서드 실행의 목적은, 모든 저장 속성 초기화를 통한 인스턴스 생성
-
-_즉, 생성자 실행의 종료 시점에는 모든 저장 속성에 값이 저장 되어 있어야 함_
-
-- 설계도(클래스, 구조체, 열거형)를 실제로 사용하기 위해 인스턴스로 찍어내는 과정
-
-- _생성자 실행시, 메모리 내에 실제 인스턴스를 생성하는 복잡한 코드가 (자동)구현된다고 생각하면 됨_
-
-##### 오버로드 지원
-
-- 다양한 파라미터 조합으로 생성자를 여러개 구현 가능
-
-- 여러가지 방식으로 인스턴스를 생성하는 방법을 제공
-
-## 구조체와 클래스의 차이
-
-| 구분           | 구조체(struct)                                                    | 클래스(class)                                                                           |
-| -------------- | ----------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
-| 타입           | Value Type(값 형식)                                               | Reference Type(참조 형식)                                                               |
-| _메모리 관련_  | 값의 저장: Stack / 복사 전달(메모리에서 자동 제거                 | 값의 저장: Heap / 주소 전달(ARC로 관리)                                                 |
-| let / var 선언 | 인스턴스 상수(let)로 선언시 저장 속성이 전부 상수로 선언됨        | 인스턴스 상수(let)로 선언하면 가리키는 인스턴스 고정(저장 속성은 각 let/var 선언에 따름 |
-| 생성자 관련    | 멤버와이즈 이니셜라이저 (자동)제공                                | 편의 생성자 존재                                                                        |
-| 메서드 + 속성  | 메서드 내에서 속성 변경 원칙적으로 불가능(mutating 키워드로 가능) | 메서드 내에서 속성 변경 가능                                                            |
-| 소멸자         | 소멸자 없음                                                       | 소멸자 있음                                                                             |
-| 상속 가능 여부 | 상속 불가능                                                       | 상속 가능(클래스가 유일)                                                                |
-
-## 값 형식과 참조 형식
-
-| 구분                  | 값 형식(구조체)                                                   | 참조 형식(클래스)                                                          |
-| --------------------- | ----------------------------------------------------------------- | -------------------------------------------------------------------------- |
-| _타입_                | _Value Type_                                                      | _Reference Type_                                                           |
-| 메모리 상의 저장 위치 | 필요시에 항상 메모리의 값이 복사되어 전달. _값의 저장: Stack_     | 필요시에 항상 메모리의 주소를 전달. _값의 저장: Heap(주소를 Stack에 저장)_ |
-| 메모리 관리 방식      | 값이 들어 있는 스택의 스코프가 종료되면 메모리에서 자동 제거      | RC(Reference Counting)을 통해 메모리를 관리. Swift에서 사용하는 ARC 모델   |
-| 각 형식의 타입 예시   | 스위프트 기본 타입(Int, String....), 튜플, 열거형, 컬렉션, 구조체 | 클래스, 클로저                                                             |
+> #### **옵셔널타입을 가진 변수의 경우는 반드시 초기화값이 있을 필요는 없음 ➞ nil로 초기화되기 때문**
