--- a/Swift-Basic/7.함수/연습문제 1.md
+++ b/Swift-Basic/7.함수/연습문제 1.md
@@ -7,6 +7,10 @@
 ```
 func chooseRandomString(_ chars: String) -> String {
 
+    // chars.randomElement()
+
+    // let randomString = String(chars.randomElement()!)
+
     return String(chars.randomElement()!)
 
 }
@@ -101,3 +105,64 @@ primeNumber(num: 97)
 
 
 ```
+
+## 팩토리얼 구현하기
+
+#### 고등학교 수학에서의 팩토리얼 개념
+
+- 5! = 5 x 4 x 3 x 2 x 1
+
+- 4! = 4 x 3 x 2 x 1
+
+- n! == n _ (n-1) _ ... \* 1 ( n >= 1 )
+
+### 팩토리얼을 함수로 구현
+
+- 어떻게 반복하도록 만들면 될까?
+
+```
+
+func factorial(num: Int) -> Int {
+
+    var sum = 1
+
+    for i in 1...num {
+
+        sum = sum * i
+    }
+
+    return sum
+}
+
+
+
+factorial(num: 5)
+
+
+
+```
+
+## 재귀함수
+
+- 자기 자신을 반복해서 호출하는 함수
+
+> #### _재귀함수: 자기 자신을 반복해서 호출하는 함수_
+
+```
+
+func factorialF(num: Int) -> Int {
+
+    if num <= 1 {
+
+        return 1
+    }
+    return num * factorialF(num: num - 1)
+}
+
+
+factorialF(num: 5)
+
+
+```
+
+> #### _재귀함수를 구현할 때는 자칫 잘못하면, 스택오버플로우 현상이 일어날 수 있으므로 주의_
